2 de julio de 2016 faltan pocos dias

--- a/OTONO2016/Articulo/paper.tex
+++ b/OTONO2016/Articulo/paper.tex
@@ -42,7 +42,9 @@
 	\begin{abstract}
 	\end{abstract}	
 \section{Introduction}
-Explicar Overloadin, ejemplos, para que sirve. Hablar de overl
+Ad-hoc polymorphism occurs when a function is defined over several different types, may behave in unrelated ways for each type~\cite{wadlerBlott:popl89}.\\
+Parametric polymorphism occurs when a function defined over a range of types has a single implemetation, acting in the same way for each type~\cite{scott}. The identity function is perhaps the simplest example of polymorphic function, where for any type, the behavior is the same.\\
+sda~\cite{CardelliWegner}
 \section{Concepts}\label{section:concepts}
 \subsection{Explicit substitution}
 \subsection{Local Type Inference}
@@ -50,4 +52,9 @@ Explicar Overloadin, ejemplos, para que sirve. Hablar de overl
 \section{Ad-hoc Polymorphism}\label{section:polymorphism}
 \subsection{Type classes}
 \subsection{Featherweight Java with dynamic and static overloading}
+
+%Bibliography
+\medskip 
+\bibliographystyle{abbrv}
+\bibliography{gsta,pleiad,gp,bib,common}
 \end{document}
