manana del 5 de julio, quedan pocos dias furza eli

--- a/OTONO2016/Articulo/bib.bib
+++ b/OTONO2016/Articulo/bib.bib
@@ -1,3 +1,72 @@
+@article{BETTINI2009261,
+title = "Special Issue on Principles and Practices of Programming in Java (PPPJ 2007) Featherweight Java with dynamic and static overloading",
+journal = "Science of Computer Programming",
+volume = "74",
+number = "5",
+pages = "261 - 278",
+year = "2009",
+note = "",
+issn = "0167-6423",
+doi = "http://dx.doi.org/10.1016/j.scico.2009.01.007",
+url = "http://www.sciencedirect.com/science/article/pii/S0167642309000136",
+author = "M. Aleksy and V. Amaral and R. Gitzel and J. Power and J. Waldron and Lorenzo Bettini and Sara Capecchi and Betti Venneri",
+keywords = "Object-oriented languages",
+keywords = "Featherweight Java",
+keywords = "Multi-methods",
+keywords = "Static overloading",
+keywords = "Dynamic overloading",
+keywords = "Type system",}
+
+
+@Article{Ribeiro2013,
+author="Ribeiro, Rodrigo
+and Camar{\~a}o, Carlos",
+title="Ambiguity and context-dependent overloading",
+journal="Journal of the Brazilian Computer Society",
+year="2013",
+volume="19",
+number="3",
+pages="313--324",
+issn="1678-4804",
+doi="10.1007/s13173-013-0103-0",
+url="http://dx.doi.org/10.1007/s13173-013-0103-0"
+}
+
+@inproceedings{Odersky:1995:SLO:224164.224195,
+ author = {Odersky, Martin and Wadler, Philip and Wehr, Martin},
+ title = {A Second Look at Overloading},
+ booktitle = {Proceedings of the Seventh International Conference on Functional Programming Languages and Computer Architecture},
+ series = {FPCA '95},
+ year = {1995},
+ isbn = {0-89791-719-7},
+ location = {La Jolla, California, USA},
+ pages = {135--146},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/224164.224195},
+ doi = {10.1145/224164.224195},
+ acmid = {224195},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{Nipkow:1993:TCT:158511.158698,
+ author = {Nipkow, Tobias and Prehofer, Christian},
+ title = {Type Checking Type Classes},
+ booktitle = {Proceedings of the 20th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '93},
+ year = {1993},
+ isbn = {0-89791-560-7},
+ location = {Charleston, South Carolina, USA},
+ pages = {409--418},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/158511.158698},
+ doi = {10.1145/158511.158698},
+ acmid = {158698},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
 @mastersthesis{scott,
   author = {Scott Lasater Kilpatrick},
   title = {Ad Hoc: Overloading and Language Design},
